--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.7.0",
         "moment": "^2.30.1",
+        "ngx-colors": "^3.6.0",
         "postcss": "^8.4.39",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
